[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Player_top-side.png" type="Texture" id=1]
[ext_resource path="res://Codes/Joueur.gd" type="Script" id=2]
[ext_resource path="res://Font/8-bit-pusab.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://8bit-SFX-Library/Shoot/gun-4.wav" type="AudioStream" id=4]
[ext_resource path="res://8bit-SFX-Library/Player/footstep.wav" type="AudioStream" id=5]
[ext_resource path="res://8bit-SFX-Library/Collide/hit-1.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 4 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 5 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 6 )

[node name="Joueur" type="KinematicBody2D"]
position = Vector2( -0.1241, 0.198423 )
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Aim" type="Position2D" parent="Sprite"]
position = Vector2( 4, -16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="HUD" type="Node2D" parent="Camera2D"]
position = Vector2( 0, -150 )

[node name="Vie" type="Label" parent="Camera2D/HUD"]
margin_left = -256.0
margin_top = 234.0
margin_right = -208.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "Vie :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Protection" type="Label" parent="Camera2D/HUD"]
margin_left = -256.0
margin_top = 256.0
margin_right = -156.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 3 )
text = "Armure :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Munitions" type="Label" parent="Camera2D/HUD"]
margin_left = -256.0
margin_top = 278.0
margin_right = -124.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 4 )
text = "Munitions :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Argent" type="Label" parent="Camera2D/HUD"]
anchor_bottom = 1.0
margin_left = 184.0
margin_top = 278.0
margin_right = 284.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 5 )
text = "Argent :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vagues" type="Label" parent="Camera2D/HUD"]
margin_left = 184.0
margin_top = 256.0
margin_right = 268.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 6 )
text = "Vague :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compteur" type="Label" parent="Camera2D/HUD"]
margin_left = -256.0
margin_right = -28.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 7 )
text = "Ennemie restant : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VieWal" type="Label" parent="Camera2D/HUD"]
margin_left = -256.0
margin_top = 211.5
margin_right = -28.0
margin_bottom = 233.5
custom_fonts/font = SubResource( 7 )
text = "Walmart : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ded" type="Label" parent="Camera2D/HUD"]
visible = false
margin_left = -211.0
margin_top = 131.0
margin_right = 212.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 8 )
text = "Vous etes mort ! vous aller reapparaitre dans x !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Node2D" parent="."]

[node name="Gun" type="AudioStreamPlayer" parent="Sound"]
stream = SubResource( 9 )
volume_db = -10.0

[node name="FootSteps" type="AudioStreamPlayer" parent="Sound"]
stream = SubResource( 10 )
volume_db = -30.0

[node name="Get_Hit" type="AudioStreamPlayer" parent="Sound"]
stream = SubResource( 11 )
